--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,33 @@
-#xx {
+@import 'header.css';
+
+#content {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+#filter {
+    margin-right: 60px;
+    margin-top: 100px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
 }
 
+.dropdown {
+    float: right;
+    padding: 6px;
+    width: 170px;
+    font-size: inherit;
+    color: bisque;
+    color: #c5d121;
+    background-color: #0D0F29;
+}
+
+.dropdown .drop-menu {
+    padding: 30px;
+    width: 20px;
+}
 .containerr {
     width: 250px;
     height: 350px;
@@ -10,10 +35,9 @@
     background-color: black;
     background-size: cover;
     cursor: pointer;
-    -webkit-box-shadow: 0 0 5px #000;
     box-shadow: 0 0 20px #000;
+    
 }
-
 .overlay {
     width: 100%;
     height: 100%;
@@ -40,21 +64,22 @@
     margin-top: 90px;
 }
 
-.price {
+.votes {
     font-size: 22px;
     line-height: 10px;
     font-weight: bold;
+    margin-top: 15px;
     opacity: 0;
     transform: translateY(40px);
     transition: all 0.7s;
 }
 
-.price .old {
+.votes .old {
     text-decoration: line-through;
     color: #b3b3b3;
 }
 
-.cart {
+.redate {
     font-size: 22px;
     opacity: 0;
     letter-spacing: 1px;
@@ -63,11 +88,11 @@
     transition: all 0.7s;
 }
 
-.cart i {
+.redate i {
     font-size: 16px;
 }
 
-.cart span {
+.redate span {
     margin-left: 10px;
 }
 
@@ -84,13 +109,13 @@
     transition-delay: 0.4s;
 }
 
-.containerr:hover .overlay .price {
+.containerr:hover .overlay .votes {
     transform: translateY(0px);
     transition-delay: 0.3s;
     opacity: 1;
 }
 
-.containerr:hover .overlay .cart {
+.containerr:hover .overlay .redate {
     transform: translateY(0px);
     transition-delay: 0.6s;
     opacity: 1;
@@ -109,86 +134,6 @@
 
 /* searchbar */
 
-
-.search-bar {
-    height: 44px;
-    width: 200px;
-    border-radius: 40px;
-    display: flex;
-    align-items: center;
-    padding: 0 0 0 20px;
-    position: relative;
-    background: #fff;
-}
-
-.input {
-    border: none;
-    height: 25px;
-    width: 150px;
-    color: #1b1b1b;
-    font-size: 15px;
-    outline: none;
-}
-
-.input:not(:placeholder-shown)+.label {
-    font-size: 9px;
-    top: 3px;
-    color: #00c853;
-}
-
-.input:focus~.label {
-    font-size: 9px;
-    top: 3px;
-    color: #4279a3;
-    transition: all 0.5s ease;
-}
-
-.label {
-    color: #aaaaaa;
-    position: absolute;
-    top: 13px;
-    pointer-events: none;
-    transition: all 0.5s ease;
-}
-
-.search-btn {
-    background: #25273E;
-    border-radius: 20px;
-    height: 40px;
-    min-width: 40px;
-    display: flex;
-    align-items: center;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-    justify-content: center;
-    cursor: pointer;
-    right: 2px;
-    position: absolute;
-    transition: all 1s ease;
-}
-
-.icon {
-    display: inline-flex;
-}
-
-.icon-18 {
-    width: 18px;
-    height: 18px;
-}
-
-.highlight {
-    width: 0px;
-    height: 1px;
-    background: #4279a3;
-    position: absolute;
-    bottom: 8px;
-    transition: all 1s ease;
-}
-
-.input:focus~.highlight {
-    width: 150px;
-    transition: all 1s ease;
-}
-
 #dataTitle {
     color: #FEF5DF;
 }
@@ -203,8 +148,4 @@
 }
 .cardbtn{
     margin-top:20px;
-}
-.poster
-{
-    /* box-shadow: 0 0 40px #000; */
 }
